--- a/style.css
+++ b/style.css
@@ -12,10 +12,10 @@
 	--Light-Gray: hsl(0, 0%, 75%);
 
 	/* ### Headings, Call-to-actions, Header Navigation */
-	--font-head: "Open Sans", sans-serif; /* 400 & 700 */
+	--font-head: "Raleway", sans-serif; /* 400 & 700 */
 
 	/* ### Body */
-	--font-body: "Raleway", sans-serif;
+	--font-body: "Open Sans", sans-serif;
 }
 
 /* 
@@ -49,41 +49,89 @@ select {
 	font: inherit;
 }
 
-
 body {
-    min-height: 100vh;
-    color: var(--Very-Dark-Blue);
-    font-family: var(--font-body);
+	min-height: 100vh;
+	color: var(--Very-Dark-Blue);
+	font-family: var(--font-body);
+	line-height: 1.5;
+}
+a {
+	text-decoration: none;
 }
 .container {
-    padding: 4rem 5rem;
+	padding: 4rem 5rem 0;
 }
 
-
-
+/* 
+---------------- Nav  */
 .nav {
-    display: flex;
-    align-items: center;
+	display: flex;
+	align-items: center;
+	font-family: var(--font-head);
 }
 .nav__logo {
-    flex-basis: 13.5%;
-    width: 5rem;
+	flex-basis: 13.5%;
+	width: 5rem;
 }
 .nav__link-group {
-    flex-basis: 100%;
+	flex-basis: 100%;
 }
 .nav__list {
-    color: var(--Very-Dark-Blue);
-    display: flex;
-    justify-content: flex-end;
-    gap: 3rem;
+	color: var(--Very-Dark-Blue);
+	display: flex;
+	justify-content: flex-end;
+	gap: 3rem;
 }
 .nav__link {
-    display: flex;
-    list-style: none;
+	display: flex;
+	list-style: none;
 }
 .nav__link-items {
-    text-decoration: none;
-    font-size: 1.05rem;
+	font-size: 1.05rem;
 }
 
+/* 
+------------------- Main  */
+.main {
+	display: flex;
+	margin-top: 2rem;
+	gap: 2rem;
+}
+.main__content {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	flex-basis: 50%;
+}
+.main__title {
+	font-size: 2.5rem;
+	font-family: var(--font-head);
+	font-weight: 700;
+	margin-bottom: 1rem;
+}
+.main__description {
+	font-weight: 400;
+	font-size: 1.1rem;
+}
+.main__form {
+	display: flex;
+	gap: 1.2rem;
+	margin-top: 1.2rem;
+}
+.main__button {
+	font-size: 0.9rem;
+	font-weight: bold;
+	color: white;
+	padding: 0.8rem 3.5rem;
+	background: var(--Bright-Blue);
+	border-radius: 4px;
+}
+.main__input-email {
+	width: 55%;
+	padding: 0.5rem 1.5rem;
+	color: var(--Light-Gray);
+}
+.main__image-container {
+    width: 100%;
+	flex-basis: 49%;
+}
