--- a/style.css
+++ b/style.css
@@ -135,3 +135,94 @@ a {
     width: 100%;
 	flex-basis: 49%;
 }
+
+/* 
+------------------ introduction  */
+.introduction {
+	min-height: 100vh;
+	display: flex;
+	/* justify-content: center;
+    align-items: center; */
+	gap: 2rem;
+	margin-top: 10rem;
+	padding-top: 8rem;
+	background-image: url(./images/bg-curve-desktop.svg);
+	background-repeat: no-repeat;
+	background-size: 320% 100%;
+	background-position: bottom;
+}
+.introduction__content {
+	display: flex;
+	flex-direction: column;
+	flex-basis: 70%;
+}
+.introduction__title {
+	font-size: 2.5rem;
+	margin-bottom: 1.5rem;
+}
+.introduction__image-group {
+	flex-basis: 50%;
+}
+.introduction__description {
+	margin-top: 1rem;
+	padding-right: 9rem;
+}
+.introduction__link {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: var(--Moderate-Cyan);
+	margin-top: 1rem;
+	padding-bottom: 0.2rem;
+	border-bottom: 1px solid var(--Moderate-Cyan);
+	width: fit-content;
+	flex-wrap: wrap;
+}
+.introduction__link-icon {
+	height: 1.2rem;
+	padding-left: 0.5rem;
+}
+.introduction__card {
+	width: 52%;
+	display: flex;
+	flex-direction: column;
+	padding: 1.8rem;
+	margin: 3rem 0 6rem;
+	background-color: white;
+	border-radius: 5px;
+	box-shadow: 0 0 31px -16px var(--Light-Gray);
+}
+.introduction__quotes-icon {
+	width: 6%;
+	margin-bottom: 0.6rem;
+}
+.introduction__testimonial {
+	font-size: 0.8rem;
+	line-height: 1.8;
+	letter-spacing: 0.5px;
+}
+.introduction__profile-container {
+	display: flex;
+	margin-top: 1rem;
+	align-items: center;
+}
+.introduction__profile-image {
+	width: 2rem;
+	height: 2rem;
+	border-radius: 50%;
+}
+.introduction__profile-group {
+	display: flex;
+	flex-direction: column;
+	font-size: 0.8rem;
+	margin-left: 0.65rem;
+}
+.introduction__profile-name {
+	font-size: 0.75rem;
+	font-weight: 700;
+	font-family: var(--font-head);
+	letter-spacing: 1.15px;
+}
+.introduction__profile-info {
+	font-size: 0.62rem;
+}
