create cta section and styling - add all elements in cta section - add styling for all elements

--- a/style.css
+++ b/style.css
@@ -230,3 +230,51 @@ a {
 .introduction__profile-info {
 	font-size: 0.62rem;
 }
+
+.cta {
+	display: flex;
+	/* align-items: center; */
+	background: var(--Desaturated-Blue);
+	color: white;
+	padding: 8rem 5rem;
+	gap: 8rem;
+}
+.cta__content {
+	display: flex;
+	flex-direction: column;
+	flex-basis: 50%;
+}
+.cta__title {
+	font-size: 2rem;
+}
+.cta__description {
+	margin-top: 1.5rem;
+	padding-right: 5rem;
+}
+
+.cta__input-group {
+	display: flex;
+	flex-direction: column;
+	flex-basis: 40%;
+}
+.cta__form {
+	font-size: 0.8rem;
+	color: var(--Light-Gray);
+	padding: 0.85rem 1.25rem;
+	margin-top: 0.75rem;
+	border-radius: 3px;
+	outline: none;
+	border: none;
+}
+.cta__button {
+	width: fit-content;
+	color: white;
+	font-size: 0.85rem;
+	font-weight: 700;
+	font-family: var(--font-head);
+	margin-top: 1rem;
+	padding: 0.85rem 1.8rem;
+	background: var(--Bright-Blue);
+	border-radius: 3px;
+}
+
