--- a/style.css
+++ b/style.css
@@ -278,3 +278,50 @@ a {
 	border-radius: 3px;
 }
 
+.footer {
+	background: var(--Very-Dark-Blue);
+	color: white;
+	padding: 7rem 5rem 5rem;
+}
+.footer__logo {
+	filter: invert(90%) sepia(1%) saturate(4007%) hue-rotate(205deg)
+		brightness(108%) contrast(105%);
+}
+.footer__container {
+	display: flex;
+	gap: 13rem;
+}
+.footer__group {
+	display: flex;
+	flex-direction: column;
+	margin-top: 1.5rem;
+}
+.footer__contact-icon {
+	width: 1rem;
+	height: 1rem;
+}
+.footer__contact-group {
+	display: flex;
+	align-items: center;
+}
+.footer__contact-group:last-child {
+	margin-top: 1rem;
+}
+.footer__contact-link {
+	margin-left: 1rem;
+}
+.footer__link:not(:first-child) {
+	margin-top: 1rem;
+}
+.footer__social-group {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.footer__social-icon {
+	width: 1.5rem;
+	margin-left: 1rem;
+	filter: invert(100%) sepia(52%) saturate(2016%) hue-rotate(181deg)
+		brightness(107%) contrast(102%);
+}
+
